--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 :spring_version: current
 :toc:
-:project_id: gs-rest-service
+:project_id: donnie-web
 :spring_version: current
 :spring_boot_version: 2.1.3.RELEASE
 :icons: font
